--- a/appspec.yml
+++ b/appspec.yml
@@ -3,8 +3,13 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app
+
 hooks:
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: ubuntu
   ApplicationStart:
-    - location: start_server.sh
+    - location: scripts/start_server.sh
       timeout: 300
       runas: ubuntu
