--- a/appspec.yml
+++ b/appspec.yml
@@ -1,9 +1,16 @@
 version: 0.0
 os: linux
+
+# Copy files to the destination
 files:
-  - source: /
+  - source: scripts/stop_server.sh    # Explicitly include the stop script
+    destination: /home/ubuntu/app/scripts
+  - source: scripts/start_server.sh   # Explicitly include the start script
+    destination: /home/ubuntu/app/scripts
+  - source: /                         # Copy all other files
     destination: /home/ubuntu/app
 
+# Lifecycle hooks
 hooks:
   ApplicationStop:
     - location: scripts/stop_server.sh
