--- a/appspec.yml
+++ b/appspec.yml
@@ -8,10 +8,21 @@ files:
 
 # Lifecycle hooks
 hooks:
-  ApplicationStop:
-    - location: scripts/stop_server.sh  # Path is relative to the bundle root
+  BeforeInstall:
+    - location: scripts/before_install.sh
       timeout: 300
       runas: root
+
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
+
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
+
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
